objects/UspsAddressValidateRequest__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>UspsAddress__c</referenceTo>
        <relationshipName>AddressValidationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsIncludeOptionalElements__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include Optional Elements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsReturnCarrierRoute__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Return Carrier Route</label>
        <type>Checkbox</type>
    </fields>
    <label>USPS Address Validate Request</label>
    <nameField>
        <displayFormat>UAVR-{00000000}</displayFormat>
        <label>USPS Address Validation Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USPS Address Validate Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>